<resources>
    <string name="app_name">GeekNews</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="detail_bottom_share">分享</string>
    <string name="detail_bottom_like">点赞</string>
    <string name="detail_bottom_commit">评论</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zhihu">知乎日报</string>
    <string name="option">资讯</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="vtex">V2EX</string>
    <string name="collect">收藏</string>
    <string name="set">设置</string>
    <string name="about">关于</string>
    <string name="op">选项</string>
    <string name="geeknews">GeekNews</string>
    <string name="enlish">A pure reading App for you</string>
    <string name="daily">日报</string>
    <string name="special">专栏</string>
    <string name="hot">热门</string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>
</resources>
