<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/option" android:id="@+id/info_title"></item>
    <group android:id="@+id/option" >


        <item
            android:checked="true"
            android:id="@+id/zhihu"
            android:checkable="true"
            android:title="@string/zhihu"
            android:icon="@mipmap/ic_drawer_zhihu"></item>
        <item
            android:id="@+id/wechat"
            android:checkable="true"
            android:title="@string/wechat"
            android:icon="@mipmap/ic_drawer_wechat"></item>
        <item
            android:id="@+id/Gank"
            android:checkable="true"
            android:title="@string/gank"
            android:icon="@mipmap/ic_drawer_gank"></item>
        <item
            android:id="@+id/Gold"
            android:checkable="true"
            android:title="@string/gold"
            android:icon="@mipmap/ic_drawer_gold"></item>
        <item
            android:id="@+id/VTEX"
            android:checkable="true"
            android:title="@string/vtex"
            android:icon="@mipmap/ic_drawer_vtex"></item>
    </group>

    <item android:title="@string/op" android:id="@+id/option_title"></item>
    <group android:id="@+id/set">

        <item
            android:id="@+id/Collect"
            android:checkable="true"
            android:title="@string/collect"
            android:icon="@mipmap/ic_drawer_like"></item>
        <item
            android:id="@+id/Setting"
            android:checkable="true"
            android:title="@string/set"
            android:icon="@mipmap/ic_drawer_setting"></item>
        <item
            android:id="@+id/About"
            android:checkable="true"
            android:title="@string/about"
            android:icon="@mipmap/ic_drawer_about"></item>
    </group>


</menu>